# project-status-tracker

./: .gitignore  CURRENT_STATUS.md  MULTIPLE_GITHUB_ACCOUNTS.md  README.md  docker-compose.yml  mcp_add_user_server.py  railway.json  setup-github-account.ps1
client/: .env.production  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
server/: API_ENDPOINTS.md  DATABASE_SETUP.md  Dockerfile  HOW_TO_GET_TOKEN.md  Postman_Collection.json  Postman_Environment.json  Procfile  README.md  SHAREPOINT_SETUP.md  main.py  mcp_add_user_server.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_migration.py  00e4b9770b55_add_clients_table.py  24833637a4ef_add_file_metadata_to_transcriptions.py  faf750793cad_convert_userrole_enum_to_string.py
server/app/api/v1/: dependencies.py  router.py
server/app/api/v1/endpoints/: auth.py  clients.py  project_status.py  projects.py  reports.py  transcriptions.py  users.py
server/app/core/: config.py  exceptions.py  logging.py  security.py
server/app/db/: database.py
server/app/db/models/: __init__.py  client.py  project.py  project_status.py  transcription.py  user.py
server/app/schemas/: __init__.py  auth.py  client.py  project.py  project_status.py  report.py  transcription.py  user.py
server/app/services/: ai_status_extractor.py  openai_service.py  report_service.py  s3_service.py  sharepoint_service.py
server/app/utils/: file_upload.py  project_status_utils.py
suport-doc/: AWS_DEPLOYMENT.md  EASIER_DEPLOYMENT_OPTIONS.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  (+3 more)
(+38 files in other folders)
