[tool.poetry]
name = "project-status-tracker-server"
version = "1.0.0"
description = "Backend API for Project Status Tracker application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-dotenv = "1.0.0"
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
email-validator = "^2.1.0"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
openai = "^1.12.0"
Office365-REST-Python-Client = {extras = ["sharepoint"], version = "2.5.3"}
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
